# cmaketest

./: .gitignore  CMakeLists.txt  generate_vs2015.bat
src/: hello.cpp  hello.hpp  main.cpp
